Templates: added error message when Middleware isn't loaded

--- a/syllabus/templates/base.html
+++ b/syllabus/templates/base.html
@@ -34,6 +34,8 @@
 			{% for pair in request.session['links'] %}
 				<a id="nav_{{pair[0]}}" href='{{pair[1]}}'><img src="/resources/images/{{pair[0]}}.png"></a>
 				
+                        {% else %}
+                            error: could not load permissions Middleware to get links
 			{% endfor %}
 		</div>
 		{% block sidebar %}{% endblock %}
