Project: installed handlebars.js

--- a/src/resources/styles/registrar/users.scss
+++ b/src/resources/styles/registrar/users.scss
@@ -141,6 +141,12 @@ td {
   margin-left: 25px;
 }
 
+.addExemption {
+  color: #c17d08;
+  display: none;
+  margin-left: 25px;
+}
+
 #userForm {
   background: url("/resources/images/redline.png") repeat-y 30px white;
   width: 525px;
