--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,7 @@
 				<a id="nav_{{pair[0]}}" href='{{pair[1]}}'><img src="/resources/images/{{pair[0]}}.png"></a>
 				
                         {% else %}
-                            error: could not load permissions Middleware to get links
+                            error: could not load permissions middleware to get links
 			{% endfor %}
 		</div>
 		{% block sidebar %}{% endblock %}
