--- a/src/templates/registrar/users/userList.html
+++ b/src/templates/registrar/users/userList.html
@@ -10,7 +10,7 @@
     <td class="userTools">&nbsp;
       <span class="editUser" onclick="editUser({{user.id}})">Edit</span>
       <span class="deleteUser" onclick="deleteUser({{user.id}})">Delete</span>
-      <span class="addExemption" onclick="addExemption({{user.id}})">Delete</span>
+      <span class="addExemption" onclick="addExemption({{user.id}})">Add Exemption</span>
     </td>
 </tr>
 {% endfor %}
