--- a/web/templates/calendar/calendar.html
+++ b/web/templates/calendar/calendar.html
@@ -2,12 +2,15 @@
 
 {% block js%} 
 <script type="text/javascript" src="/static/scripts/tooltipster.js"></script>
+<script type="text/javascript" src="/static/scripts/handlebars.js"></script>        
 <script type="text/javascript" src="/static/scripts/calendar.js"></script>        
 {% endblock %}        
+
 {% block css %}        
-    <link type="text/scss" rel="stylesheet" href="/static/styles/calendar.scss" ></link>
-    <link type="text/scss" rel="stylesheet" href="/static/styles/tooltipster.scss" ></link>
+<link type="text/scss" rel="stylesheet" href="/static/styles/calendar.scss" ></link>
+<link type="text/scss" rel="stylesheet" href="/static/styles/tooltipster.scss" ></link>
 {% endblock %}
+
 {%block content %}
 <div id="calendarViewSelect">
     <ul>
@@ -18,6 +21,9 @@
 </div>
 
 <div id="calendarToolBar">
+
+  {# ADMIN CONTROLS #}
+  
 {% if request.user.groups.filter(name='admin').all() %}
   <span class="registrarTools">
     <select>
@@ -30,9 +36,29 @@
   </span>
 {% endif %}
 
-	Add: <span onclick="newEvent('assignment')"><img src="/resources/images/calendar/document.png"> Assignment</span> <span onclick="newEvent('test')"><img src="/resources/images/calendar/documentPencil.png"> Test</span> <span onclick="newEvent('lecture')"><img src="/resources/images/calendar/projector.png"> Lecture</span>
+ {# TEACHER CONTROLS #}
+
+  Add: 
+  <span onclick="newEvent('assignment')">
+    <img src="/resources/images/calendar/document.png">
+    Assignment
+  </span>
+  <span onclick="newEvent('test')">
+    <img src="/resources/images/calendar/documentPencil.png">
+    Test
+  </span> 
+  
+  <span onclick="newEvent('lecture')">
+    <img src="/resources/images/calendar/projector.png"> 
+    Lecture
+  </span>
 </div>
 
-<div id="calendar" todayyear="{{today.year}}" todaynumber="{{today.number}}" which="{{which}}" year="{{year}}" number="{{intMonth}}">unable to connect to server...
+{# empty calendar so the javascript has a target #}
+
+<div id="calendar" todayyear="{{today.year}}" todaynumber="{{today.number}}" which="{{which}}"
+     year="{{year}}" number="{{intMonth}}">
+  unable to connect to server...
 </div>
+
 {% endblock %}
