Classroom: class select buttons in gradebook load using the django rest framework and angular

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -30,9 +30,15 @@
 
 {% raw %}
 <div id="gradebook" ng-app="gradebook">
-  <aside id="gradeBookClassSelect" ng-controller="ClassSelect">
+  <aside id="gradeBookClassSelect" >
     <ul class="sidebar" ng-controller="ClassSelect">
-      {{message}}
+      <li ng-repeat="class in classes"  id="{{class.id}}" class="gradeBookClass">
+        <div class="gradeBookSelectLabel">
+          <img onclick="viewSections(event, {{class.id}})" 
+               src="/resources/images/sidebarArrow.png"> 
+          {{class.id}}
+        </div>
+      </li>
     </ul>
   </aside>
 </div>
