Classroom: class select buttons in gradebook template now show the class name

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -36,7 +36,7 @@
         <div class="gradeBookSelectLabel">
           <img onclick="viewSections(event, {{class.id}})" 
                src="/resources/images/sidebarArrow.png"> 
-          {{class.id}}
+          {{class.name}}
         </div>
       </li>
     </ul>
