--- a/web/resources/styles/gradebook.scss
+++ b/web/resources/styles/gradebook.scss
@@ -47,7 +47,7 @@ input {
   width: 100%;
 }
 
-.gradeBookViewToolBar {
+#gradeBookToolbar {
   float: right;
   position: relative;
 }
@@ -221,7 +221,7 @@ input {
 
 #gradingScaleSelect {
   position: absolute;
-  top: 125px;
+  top: 137px;
   right: 200px;
   float: left;
   width: 225px;
@@ -234,6 +234,7 @@ input {
   /* for IE9+, Firefox 4+, Opera, Chrome */
   padding: 10px 0px 5px 5px;
   background: #F2F0E0;
+  text-align: center;
   .arrow-up {
     width: 0;
     height: 0;
@@ -245,10 +246,6 @@ input {
     margin-top: -21px;
     margin-right: 15px;
   }
-}
-
-#gradingScaleSelectBody {
-  text-align: center;
 }
 
 #gradingScaleButtons {
