Classroom: cleaned up more comments; added handler for applyScale

--- a/web/templates/gradebook/gradingScale.html
+++ b/web/templates/gradebook/gradingScale.html
@@ -17,6 +17,6 @@
     <li class="closeWidget" id="closeGradingScaleSelect" ng-click="showGradingScale = false">
       close
     </li>
-    <li class="submitWidget" onclick="applyGradingScale()">apply</li>
+    <li class="submitWidget" ng-click="applyScale()">apply</li>
   </ul>
 </div>
